--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@mui/styled-engine-sc": "^5.11.0",
     "@nivo/pie": "^0.80.0",
     "@reduxjs/toolkit": "^1.8.5",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.5",
+    "express": "^4.18.2",
     "formik": "^2.2.9",
     "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.5",
