--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react-router-dom": "^6.4.0",
     "redux-saga": "^1.2.1",
     "redux-thunk": "^2.4.1",
-    "styled-components": "^5.3.6",
+    "styled-components": "^5.3.11",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -57,6 +57,7 @@
     "@types/jest": "^28.1.6",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "@vitejs/plugin-react": "^2.1.0",
