--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -75,6 +75,9 @@
         ]
     },
     "settings": {
+        "import/parsers": {
+            "@typescript-eslint/parser": [".ts", ".tsx"]
+        },
         "import/resolver": {
             "node": {
                 "extensions": [".js", ".jsx", ".ts", ".tsx"]
